--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridContainer.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridContainer.razor
@@ -1,6 +1,4 @@
-﻿@using H.LowCode.MetaSchema
-
-<div style="height: auto;">
+﻿<div style="height: auto;">
     @for (int r = 0; r < Rows; r++)
     {
         int rr = r;
