--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutContainer.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutContainer.razor
@@ -1,6 +1,4 @@
-﻿@using H.LowCode.MetaSchema
-
-<Layout Style="height:100%">
+﻿<Layout Style="height:100%">
     <Sider Style="background: #f4f7fa; height:100%;">
         <DropItemContainer ParentComponent="@CreatComponent("layoutcontainer-sider")"></DropItemContainer>
     </Sider>
