--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/_Imports.razor
@@ -2,4 +2,5 @@
 @using AntDesign;
 @using H.LowCode.DesignEngine.Services
 @using H.LowCode.DesignEngine.DesignPanel
+@using H.LowCode.MetaSchema
 @using H.Util.Blazor
