--- a/src/Sample/H.LowCode.Sample.Admin/Layout/NavMenu.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/Layout/NavMenu.razor
@@ -13,40 +13,9 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> DesignEngine 示例
             </NavLink>
         </div>
-
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="form/basicform/1">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> 基础表单 (渲染)
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="form/linkageform/2">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> 联动表单 (渲染)
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="form/customform/3">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> 自定义表单 (渲染)
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="form/validateform/4">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> 校验表单 (渲染)
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="form/complexform/5">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> 复杂表单 (渲染)
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="list">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> 列表 (渲染)
+            <NavLink class="nav-link" href="/rendersample">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> RenderEngine 示例
             </NavLink>
         </div>
     </nav>
