--- a/src/Sample/H.LowCode.Sample.Admin/Pages/Index.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/Pages/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
 
-<h1>Hello, H.LowCode!</h1>
+<h1>H.LowCode.DesignEngine</h1>
 
-<p>设计器示例：</p>
+<p>页面设计示例：</p>
 
 <p>
     <a href="/designer/appid/pageid" target="_blank">默认设计器</a>
