--- a/src/Sample/H.LowCode.Sample.Host.Client/Routes.razor
+++ b/src/Sample/H.LowCode.Sample.Host.Client/Routes.razor
@@ -16,7 +16,9 @@
 {
     private Assembly[] Assemblies = new Assembly[]
     {
-        typeof(H.LowCode.DesignEngine._Imports).Assembly
+        typeof(H.LowCode.DesignEngine._Imports).Assembly,
+        typeof(H.LowCode.RenderEngine.AntBlazor._Imports).Assembly
+        //typeof(H.LowCode.RenderEngine.Html._Imports).Assembly
     };
 
     private Type DefaultLayout = typeof(H.LowCode.Sample.Admin.Layout.MainLayout);
