--- a/src/Sample/H.LowCode.Sample.Host/Components/App.razor
+++ b/src/Sample/H.LowCode.Sample.Host/Components/App.razor
@@ -1,30 +1,20 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <base href="/" />
+        <link rel="icon" type="image/png" href="logo.png" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="H.LowCode.Sample.Host.styles.css" />
+        <!-- H.LowCode.Sample.Host -->
+        <link rel="stylesheet" href="app.css" />
+        <link rel="stylesheet" href="H.LowCode.Sample.Host.styles.css" />
+        <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
 
-    <!-- H.LowCode.DesignEngine Assets -->
-    <link href="_content/H.LowCode.DesignEngine/designengine.css" rel="stylesheet" />
-
-    <!-- Ant Design Pro Blazor Assets -->
-    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
-    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
-
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="app.css" />
-    <link rel="icon" type="image/png" href="logo.png" />
-
-    <HeadOutlet @rendermode="@InteractiveAuto" />
-</head>
-
-<body>
-    <Routes @rendermode="@InteractiveAuto" />
-    <script src="_framework/blazor.web.js"></script>
-</body>
-
+        <HeadOutlet @rendermode="@InteractiveAuto" />
+    </head>
+    <body>
+        <Routes @rendermode="@InteractiveAuto" />
+        <script src="_framework/blazor.web.js"></script>
+    </body>
 </html>
