--- a/src/DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
@@ -9,6 +9,8 @@
 @inject HttpClient HttpClient
 @inject DragDropStateService DragDropStateService
 
+<link href="_content/H.LowCode.DesignEngine/designengine.css" rel="stylesheet" />
+
 <AntDesign.Layout Class="designpage" Style="padding:5px 2px 10px; background-color: #f7f7f7;">
     <Header Style="background-color: white; padding:0 20px;">
         <div style="float:left;">
