--- a/src/DesignEngine/H.LowCode.DesignEngine.CustomComponents/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.CustomComponents/_Imports.razor
@@ -2,3 +2,6 @@
 @using Microsoft.JSInterop
 @using H.LowCode.MetaSchema
 @using H.Util.Blazor
+@using BlazorMonaco
+@using BlazorMonaco.Editor
+@using BlazorMonaco.Languages
