--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/FlexWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/FlexWrap.razor
@@ -1,7 +1,5 @@
-﻿<Flex Gap="middle" Align="start" Vertical>
-    <Flex style="@_boxStyle" Justify="@_justify" Align="@_align">
-        <DropItemContainer ParentComponent="@_component"></DropItemContainer>
-    </Flex>
+﻿<Flex Gap="middle" Justify="@_justify" Align="@_align" Style="@_boxStyle">
+    <DropItemContainer ParentComponent="@_component" Style="min-height:150px;width:100%;"></DropItemContainer>
 </Flex>
 
 @code {
@@ -13,9 +11,9 @@
     /// </summary>
     private ComponentSchema _component;
 
-    private string _boxStyle = "width:100%;height:120px;border-radius:6px;border:1px solid #40a9ff;";
-    private string _justify;
-    private string _align;
+    private string _boxStyle = "width:100%;height:auto;border-radius:6px;";
+    private string _justify = "center";
+    private string _align = "center";
 
     #region Init
     protected override void OnInitialized()
@@ -31,10 +29,15 @@
             RegisterEventDispatcher();
     }
 
+    protected override bool ShouldRender()
+    {
+        return false;
+    }
+
     private void Init()
     {
         if (_component == null)
-            _component = Component.CreateNew();
+            _component = Component.CopyNew();
     }
 
     private void RegisterEventDispatcher()
