--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutWrap.razor
@@ -1,28 +1,15 @@
-﻿<div style="height: auto;">
-    @for (int r = 0; r < Rows; r++)
-    {
-        int rr = r;
-        <GridRow Style="min-height:85px; height: auto;">
-           @for (int c = 0; c < Cols; c++)
-           {
-                string key = $"gridcontainer-{rr}-{c}";
-                <GridCol Span="@(24/Cols)" Style="width:100%; background-color:#f4f4f4; border: 1px dashed #ded9d9;">
-                    <DropItemContainer ParentComponent="@CreatComponent(key)"></DropItemContainer>
-                </GridCol>
-           }
-        </GridRow>
-    }
-</div>
+﻿<Layout Style="height:100%">
+    <Sider Style="background: #f4f7fa; height:100%;">
+        <DropItemContainer ParentComponent="@CreatComponent("layoutcontainer-sider")"></DropItemContainer>
+    </Sider>
+    <Content Style="height: 100%;">
+        <DropItemContainer ParentComponent="@CreatComponent("layoutcontainer-content")"></DropItemContainer>
+    </Content>
+</Layout>
 
 @code {
     [Parameter]
     public ComponentSchema Component{ get; set; }
-
-    [Parameter]
-    public int Rows { get; set; } = 2;
-
-    [Parameter]
-    public int Cols { get; set; } = 2;
 
     /// <summary>
     /// 保存初始的 Component，避免跟随 Component 变化
@@ -43,10 +30,15 @@
             RegisterEventDispatcher();
     }
 
+    protected override bool ShouldRender()
+    {
+        return false;
+    }
+
     private void Init()
     {
         if (_component == null)
-            _component = Component.CreateNew();
+            _component = Component.CopyNew();
     }
 
     private void RegisterEventDispatcher()
@@ -54,7 +46,6 @@
         //订阅属性面板中的事件
         BlazorEventDispatcher.RegisterEvent("designengine.propertysetting.onchange", (value) =>
         {
-            //Rows = Random.Shared.Next(1, 4);
             StateHasChanged();
         });
     }
@@ -62,19 +53,19 @@
 
     private ComponentSchema CreatComponent(string key)
     {
-        if (Component.Childrens.Count >= (Rows * Cols))
+        if (Component.Childrens.Count >= 2)
         {
             return Component.Childrens.FirstOrDefault(t =>
             {
-                if (t.ComponentPropertySchema.ExtensionData.ContainsKey(key))
+                if (t.ComponentProperty.ExtensionData.ContainsKey(key))
                     return true;
                 return false;
             });
         }
 
-        var component = _component.CreateNew();
+        var component = _component.CopyNew();
         component.ComponentCategory = ComponentCategory.Container;
-        component.ComponentPropertySchema.ExtensionData.Add(key, key);
+        component.ComponentProperty.ExtensionData.Add(key, key);
         component.ParentId = Component.Id;
 
         Component.Childrens.Add(component);
